grammar_to_ply/error_msgs.txt
  File "../programs/python/toy_programs/output_programs/errors/sum_of_positive_0_error.py", line 1
    Line no. 1: Unknown + found.
          ^
SyntaxError: invalid syntax
